--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "author": "bezkoder",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.3.1",
+    "jsonwebtoken": "^9.0.3",
     "mysql": "^2.18.1"
   }
 }
