--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "ejs": "^4.0.1",
     "express": "^4.18.2",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
