--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "author": "bezkoder",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "connect-session-sequelize": "^8.0.5",
     "cors": "^2.8.5",
     "ejs": "^4.0.1",
     "express": "^4.18.2",
+    "express-session": "^1.19.0",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
     "mysql": "^2.18.1",
