--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "ejs": "^4.0.1",
     "express": "^4.18.2",
+    "express-mysql-session": "^3.0.3",
     "express-session": "^1.19.0",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
