--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.19.0",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
+    "multer": "^2.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.16.2"
   }
